fix images on mobile

--- a/pages/home.module.css
+++ b/pages/home.module.css
@@ -180,7 +180,7 @@
         width: 100%;
         text-align: center;
     }
-    .projects {
+    .mainContainer {
         width: 95%;
     }
     .projectContainer {
@@ -203,10 +203,10 @@
     }
     .sideBySideImages {
         width: 100%;
-        justify-content: flex-start;
+        justify-content: center;
     }
     .workImage {
-        height: 14rem;
-        max-width: 100%;
+        width: 100%;
+        height: auto;
     }
 }
